syntax = "proto3";

package ex2;

service Hello {
	rpc SayHello (HelloRequest) returns (HelloResponse){}
}

service Fibonacci {
	rpc Fib(FibMsg) returns (FibMsg){}
}

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string message = 1;
}

message FibMsg {
	int64 num = 1;
}
